force-app/main/default/objects/Guest__c/Guest__c.object-meta.xml
<CustomObject>
    <label>Guest</label>
    <nameField>
        <label>Guest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>