force-app/main/default/objects/Guest__c/fields/Calculated_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Headcount__c</fullName>
    <formula>IF(Plus_One_Included__c, 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>