force-app/main/default/objects/Guest__c/fields/Plus_One_Included__c.field-meta.xml
<CustomField>
    <fullName>Plus_One_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plus-One Included</label>
    <type>Checkbox</type>
</CustomField>