force-app/main/default/objects/Guest__c/fields/Sahra_Event__c.field-meta.xml
<CustomField>
    <fullName>Sahra_Event__c</fullName>
    <label>Sahra Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Guests</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>