force-app/main/default/objects/Guest__c/fields/Seating_Preference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Seating_Preference_Notes__c</fullName>
    <label>Seating Preference Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>